@@ -593,6 +593,81 @@ I'M NOT SURE WHAT'S WRONG WITH THIS EXAMPLE
   </ul>
 </td>
 </tr>
+<tr>
+<td>0.2.4</td>
+<td> <ul>
+     <li> Parallel (8 proc, ~0.9 A spacing, LPBE):   ??? kJ/mol 
+     <li> Sequential (2-level focus to <=0.725 A, NPBE): ??? kJ/mol
+     </ul>
+</td>
+<td> <ul>
+     <li> -??? kJ/mol<br>(3 A sphere, 2-level focus to 0.188 A, srfm 0, chgm 0)
+     <li> -??? kJ/mol<br>(3 A sphere, 2-level focus to 0.188 A, srfm 1, chgm 1)
+     <li> -??? kJ/mol<br>(3 A sphere, 4-proc 3-level para focus to 0.103 A, srfm
+1, chgm 1)
+     </ul>
+</td>
+<td>2-level focusing to 0.225 A, VdW surface:
+  <ul>
+  <li>1D7H-DMSO:
+    <ul>
+    <li> DGbind(solv.):  ??? kJ/mol
+    <li> DGbind(Coul.): -??? kJ/mol
+    <li> DGbind: -??? kJ/mol
+    </ul>
+  <li>1D7I-DSS:
+    <ul>
+    <li> DGbind(solv.): ??? kJ/mol
+    <li> DGbind(Coul.): -??? kJ/mol
+    <li> DGbind:      ??? kJ/mol
+    </ul>
+  </ul>
+</td>
+<td> 
+2-level focus to 0.225, srfm 1, VdW surf:
+    <ul>
+    <li> Directly-calculated binding energy: -??? kJ/mol
+    </ul>
+<br>
+</td>
+<td>3-level focus to 0.094 A spacing (vdw surf, srfm 0): 
+  <ul>
+  <li> Acetic acid solv. G: -??? kJ/mol
+  <li> Acetate solv. G:  -??? kJ/mol
+  <li> Proton solv. G:  -??? kJ/mol
+  <li> IONIZATION ENERGY: -??? kJ/mol
+</td>
+<td> 0.53 A resolution, NPBE:
+  <ul>
+  <li> ??? kJ/mol (prot. diel. of 12)
+  <li> ??? kJ/mol (prot. diel. of 2)
+  </ul>
+<td> 2-level focusing to 0.250 A spacing:
+  <ul>
+  <li> ??? kJ/mol (vdw-based dielectric)
+  <li> ??? (mol surf-based dielectric)
+  </ul>
+</td>
+<td><ul>
+    <li> ??? kJ/mol (1 A dist)
+    <li> ??? kJ/mol (2 A dist)
+    <li> ??? kJ/mol (3 A dist)
+    <li> ??? kJ/mol (4 A dist)
+    </ul>
+</td>
+<td> 0.250 A spacing, zero probe radius, srfm 1
+  <ul>
+  <li> Methanol:  -??? kJ/mol
+  <li> Methoxide: -??? kJ/mol
+  <li> Difference:  -??? kJ/mol
+  </ul>
+</td>
+</tr>
+</table>
+
+</body>
+
+</html>
 </table>
 
 </body>
